@@ -1,4 +1,7 @@
-//@ defaultNoEagerRun
+//@ skip
+// previously defaultNoEagerRun
+// This test fails with reoptimizationRetryCount=1 with ftl-no-cjit.
+// Reenable this test after fixing https://bugs.webkit.org/show_bug.cgi?id=129953.
 
 function foo(a) {
     a[0] = 1;
